# AI-RAG-System

./: .gitignore  pyproject.toml  requirements.txt
demo/: demo_app.py
src/rag_platform.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/rag_platform/api/: app.py  retrieval.py
src/rag_platform/common/: errors.py  health.py  logging.py  types.py  utils.py
src/rag_platform/config/: settings.py
src/rag_platform/evaluation/: cli.py  milvus_corpus.py  pipeline_service.py  ragas_service.py  schemas.py  testset_service.py
src/rag_platform/ingestion/: cli.py  file_prep.py  heavy_router.py  json_adapter.py  service.py
src/rag_platform/ingestion/runs/ingestion/20260223T111433Z/: report.json
src/rag_platform/ingestion/runs/ingestion/20260223T112325Z/: report.json
src/rag_platform/ingestion/runs/ingestion/20260223T115734Z/: report.json
src/rag_platform/ingestion/runs/ingestion/20260223T124007Z/: report.json
src/rag_platform/ingestion/runs/ingestion/20260223T131022Z/: report.json
src/rag_platform/ingestion/runs/ingestion/20260223T132534Z/: report.json
src/rag_platform/ingestion/temp_ingest_results/: 20260224T063538Z_marco-output_structured.json
src/rag_platform/logging/: rag_audit.py
src/rag_platform/retrieval/: cli.py  dotnet_auth.py  dotnet_chat.py  dotnet_client.py  dotnet_llm.py  milvus_client.py  prompting.py  schemas.py  service.py
src/rag_platform/retrieval/LLM/Dotnet_Integration/: dotnet_auth.py  dotnet_chat.py
src/rag_platform/retrieval/LLM/vLLM/: vLLM.py  vLLM_chat.py
(+10 files in other folders)
